--- a/sicupira/templates/sicupira/programa_confirm_delete.html
+++ b/sicupira/templates/sicupira/programa_confirm_delete.html
@@ -33,6 +33,10 @@
                     <td>{{ programa.nome_ingles }}</td>
                 </tr>
                 <tr>
+                    <td>Ano:</td>
+                    <td>{{ programa.ano }}</td>
+                </tr>
+                <tr>
                     <td>Nota:</td>
                     <td>{{ programa.nota }}</td>
                 </tr>
