--- a/sicupira/templates/sicupira/linhapesquisa_form.html
+++ b/sicupira/templates/sicupira/linhapesquisa_form.html
@@ -22,10 +22,11 @@
 <div style="width: 90%;margin: auto;">
   <form method="post">
     {% csrf_token %}
-    
+
     {% if linhapesquisa_form.errors %}      
-    <div class="alert alert-danger" role="alert">
-      {{ linhapesquisa_form.errors }}
+    <div class="alert alert-info alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      {{ linhapesquisa_form.errors.as_ul }}
     </div>
     {% endif %}
     
