--- a/sicupira/templates/sicupira/programa_form.html
+++ b/sicupira/templates/sicupira/programa_form.html
@@ -68,6 +68,11 @@
       </div>
       <div class="form-row">
         <div class="form-group">
+          {{ form.ano|as_crispy_field }}
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group">
           {{ form.nota|as_crispy_field }}
         </div>
       </div>
