--- a/sicupira/templates/pessoa/discente_form.html
+++ b/sicupira/templates/pessoa/discente_form.html
@@ -30,6 +30,11 @@
             <button type="submit" name="import_xml" lass="btn btn-primary">Upload</button>
         </form>
         <br/>
+    {% else %}
+        <div>
+            <a href="{{discente.pessoa.lattes_id}}" target="_blank">Veja o curriculos lattes</a>
+        </div>
+       <br/>
     {% endif %}
     <form method="post"  >
       {% csrf_token %}      
