--- a/sicupira/templates/pessoa/discente_confirm_delete.html
+++ b/sicupira/templates/pessoa/discente_confirm_delete.html
@@ -20,11 +20,19 @@
                 <th>{{discente.pessoa.nome}}</th>
             </thead>
             <tbody>
+                 <tr>
+                    <td>Lattes ID:</td>
+                    <td><a href="#" target="popup" onclick="window.open('http://lattes.cnpq.br/{{ discente.pessoa.lattes_id }}','name','width=800,height=600')">{{ discente.pessoa.lattes_id }}</a></td>
+                </tr>
+                <tr>
+                    <td>Resumo:</td>
+                    <td>{{ discente.pessoa.resumo }}</td>
+                </tr>
                 <tr>
                     <td>Sexo:</td>
                     <td>{{ discente.pessoa.sexo.desc_sexo }}</td>
                 </tr>
-                <tr>
+               <tr>
                     <td>Email:</td>
                     <td>{{ discente.pessoa.email }}</td>
                 </tr>
@@ -55,10 +63,6 @@
                 <tr>
                     <td>Instituição:</td>
                     <td>{{ discente.curso.programa_id.instituicao.nome }}</td>
-                </tr>
-                <tr>
-                    <td>Ano Inicio:</td>
-                    <td>{{ discente.ano }}</td>
                 </tr>
             </tbody>
         </table>
