--- a/sicupira/templates/sicupira/linhapesquisa_form.html
+++ b/sicupira/templates/sicupira/linhapesquisa_form.html
@@ -24,7 +24,7 @@
     {% csrf_token %}
 
     {% if linhapesquisa_form.errors %}      
-    <div class="alert alert-info alert-dismissable">
+    <div class="alert alert-danger alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
       {{ linhapesquisa_form.errors.as_ul }}
     </div>
