formatação tela inicial

--- a/sicupira/templates/sicupira/index.html
+++ b/sicupira/templates/sicupira/index.html
@@ -6,10 +6,15 @@
 
 {% load static %} 
 
-<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Projeto Sicupira</h3>
+<div style="text-align: center;margin-left: 30%;margin-right: 30%; width: 40%;">
+  <img src="{% static "images\logo.png" %}" alt="My image" style="height: 500px;">
+
+
+<h3>  Projeto Sicupira</h3>
 
   <p>    
     Projeto desenvolvido como forma de avaliação da disciplina de DSC do IME 2020. O objetivo é desenvolver um sistema inspirado no Sucupira da CAPES com os módulos de Dados Cadastrais do Programa, Linhas de pesquisa, Turmas, Docentes e Discentes.
   </p>
+</div>
 
   {% endblock %}
