correção buca ano.discente

--- a/sicupira/templates/pessoa/discente_confirm_delete.html
+++ b/sicupira/templates/pessoa/discente_confirm_delete.html
@@ -64,6 +64,10 @@
                     <td>Instituição:</td>
                     <td>{{ discente.curso.programa_id.instituicao.nome }}</td>
                 </tr>
+                <tr>
+                    <td>Ano:</td>
+                    <td>{{ discente.curso.programa_id.ano }}</td>
+                </tr>
             </tbody>
         </table>
 
