--- a/sicupira/templates/pessoa/discente_form.html
+++ b/sicupira/templates/pessoa/discente_form.html
@@ -25,9 +25,10 @@
         <h4>Importar Curriculo Lattes</h4>
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            <input type="file" name="myfile" class="btn btn-default">
-            <br />
-            <button type="submit" name="import_xml" lass="btn btn-primary">Upload</button>
+            <input type="file"  accept=".xml" name="myfile" class="btn btn-default" >
+            <p>Selecionar apenas arquivos XML</p>
+            <br/>
+            <button type="submit" name="import_xml" class="btn btn-primary">Upload</button>   
         </form>
         <br />
     {% endif %}
