--- a/sicupira/templates/sicupira/programa_detail.html
+++ b/sicupira/templates/sicupira/programa_detail.html
@@ -1,13 +1,13 @@
 {% extends 'sicupira/base.html' %}
 
 {% block breadcrumbs %}
-{{ block.super }} » <a href="{% url 'programa_view' programa.id %}">Detalhes do programa</a>
+{{ block.super }} » <a href="{% url 'programa_view' programa.id %}">Detalhes do programa - Dados cadastrais básicos</a></a>
 {% endblock %}
 
 {% block content %}
 {% load static %}
 
-<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Detalhes da Programa</h3>
+<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Detalhes da Programa - Dados cadastrais básicos</a></h3>
 
 
 <table class="table table-striped">
