--- a/sicupira/templates/sicupira/programa_form.html
+++ b/sicupira/templates/sicupira/programa_form.html
@@ -4,9 +4,9 @@
     {{ block.super }} » 
 
     {% if programa.id > 0 %}
-    <a href="{% url 'programa_edit' programa.id %}">Formulário do programa</a>
+    <a href="{% url 'programa_edit' programa.id %}">Formulário do programa - Dados cadastrais básicos</a></a>
     {% else %}
-    <a href="{% url 'programa_new' %}">Formulário do programa</a>
+    <a href="{% url 'programa_new' %}">Formulário do programa - Dados cadastrais básicos</a></a>
     {% endif %}
     
 {% endblock %}
@@ -16,7 +16,7 @@
 {% block content %}
 {% load static %} 
 
-<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Formulário do Programa</h3>
+<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Formulário do Programa - Dados cadastrais básicos</a></h3>
 
 <div style="width: 90%;margin: auto;">
     <form method="post">
