--- a/sicupira/templates/sicupira/programa_list.html
+++ b/sicupira/templates/sicupira/programa_list.html
@@ -1,13 +1,13 @@
 {% extends 'sicupira/base.html' %}
 
 {% block breadcrumbs %}
-    {{ block.super }} » <a href="{% url 'programa_list' %}">Lista de programas</a>
+    {{ block.super }} » <a href="{% url 'programa_list' %}">Lista de programas - Dados cadastrais básicos</a>
 {% endblock %}
 
 {% block content %}
 {% load static %} 
 
-<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Programas</h3>
+<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Programas - Dados cadastrais básicos</a></h3>
 
 <div style="width: 90%;margin: auto;">
 
